--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Document</title>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -21,6 +22,20 @@
     />
   </head>
   <body>
+    <svg
+      aria-hidden="true"
+      style="position: absolute; width: 0; height: 0; overflow: hidden"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <use href="./images/icons.svg#antenna-1"></use>
+      <use href="./images/icons.svg#astronaut-1"></use>
+      <use href="./images/icons.svg#clock-1"></use>
+      <use href="./images/icons.svg#diagram-1"></use>
+      <use href="./images/icons.svg#facebook"></use>
+      <use href="./images/icons.svg#instagram"></use>
+      <use href="./images/icons.svg#linkedin2"></use>
+      <use href="./images/icons.svg#twitter"></use>
+    </svg>
     <header class="header">
       <div class="nav-menu container">
         <nav class="navigation">
@@ -28,9 +43,9 @@
             >Web<span class="logo-grey">Studio</span></a
           >
           <ul class="menu-main">
-            <li><a class="menu" href="./index.html">Studio</a></li>
-            <li><a class="menu" href="">Portfolio</a></li>
-            <li><a class="menu" href="">Contacts</a></li>
+            <li><a class="menu studio" href="./index.html">Studio</a></li>
+            <li><a class="menu portfolio-menu" href="">Portfolio</a></li>
+            <li><a class="menu contacts" href="">Contacts</a></li>
           </ul>
         </nav>
 
@@ -72,6 +87,11 @@
           <h2 class="visually-hidden">Our Advantages</h2>
           <ul class="advantages">
             <li class="advantages-list-item">
+              <div class="icon-list">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-list">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +99,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="icon-list">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#clock-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-list">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +111,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="icon-list">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-list">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +123,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="icon-list">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-list">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,7 +147,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/Mark.jpg"
+                  src="./images/img_1.jpg"
                   alt="product-designer"
                   width="264"
                   height="260"
@@ -121,12 +156,44 @@
               <div class="team-descr">
                 <h3 class="team-list-header">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <div>
+                  <ul class="social-media-team">
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin2"></use>
+                        </svg>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/Tom.jpg"
+                  src="./images/img_2.jpg"
                   alt="frontend-developer"
                   width="264"
                   height="260"
@@ -135,12 +202,44 @@
               <div class="team-descr">
                 <h3 class="team-list-header">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <div>
+                  <ul class="social-media-team">
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin2"></use>
+                        </svg>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/Camila.jpg"
+                  src="./images/img_3.jpg"
                   alt="marketing"
                   width="264"
                   height="260"
@@ -149,12 +248,48 @@
               <div class="team-descr">
                 <h3 class="team-list-header">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <div>
+                  <ul class="social-media-team">
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social">
+                          <use
+                            href="./images/icons.svg#instagram"
+                            width="16"
+                            height="16"
+                          ></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin2"></use>
+                        </svg>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/Daniel.jpg"
+                  src="./images/img_4.jpg"
                   alt="ui-designer"
                   width="264"
                   height="260"
@@ -163,6 +298,38 @@
               <div class="team-descr">
                 <h3 class="team-list-header">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <div>
+                  <ul class="social-media-team">
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon-circle">
+                        <svg class="icon-social" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin2"></use>
+                        </svg>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
@@ -177,8 +344,16 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img src="./images/banking.jpg" alt="banking-app" width="360" />
+                <img src="./images/portf_1.jpg" alt="banking-app" width="360" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
               </div>
+
               <div class="portfolio-descr">
                 <h3 class="portfolio-list-header">Banking App</h3>
                 <p class="portfolio-text">App</p>
@@ -187,10 +362,18 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/CashlessPayment.jpg"
+                  src="./images/portf_2.jpg"
                   alt="cashless-payment"
                   width="360"
                 />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    malesuada justo nec ex blandit, eget sodales lacus
+                    malesuada. Mauris ultrices hendrerit purus, eu finibus nunc
+                    laoreet a. Nullam vitae metus eu tellus tincidunt efficitur.
+                  </p>
+                </div>
               </div>
               <div class="portfolio-descr">
                 <h3 class="portfolio-list-header">Cashless Payment</h3>
@@ -200,10 +383,18 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/MeditationApp.jpg"
+                  src="./images/portf_3.jpg"
                   alt="meditation-app"
                   width="360"
                 />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    malesuada justo nec ex blandit, eget sodales lacus
+                    malesuada. Mauris ultrices hendrerit purus, eu finibus nunc
+                    laoreet a. Nullam vitae metus eu tellus tincidunt efficitur.
+                  </p>
+                </div>
               </div>
               <div class="portfolio-descr">
                 <h3 class="portfolio-list-header">Meditation App</h3>
@@ -213,10 +404,18 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/TaxService.jpg"
+                  src="./images/portf_4.jpg"
                   alt="taxi-service"
                   width="360"
                 />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    malesuada justo nec ex blandit, eget sodales lacus
+                    malesuada. Mauris ultrices hendrerit purus, eu finibus nunc
+                    laoreet a. Nullam vitae metus eu tellus tincidunt efficitur.
+                  </p>
+                </div>
               </div>
               <div class="portfolio-descr">
                 <h3 class="portfolio-list-header">Taxi Service</h3>
@@ -226,10 +425,18 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/ScreenIllustrations.jpg"
+                  src="./images/portf_5.jpg"
                   alt="screen-illustrations"
                   width="360"
                 />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    malesuada justo nec ex blandit, eget sodales lacus
+                    malesuada. Mauris ultrices hendrerit purus, eu finibus nunc
+                    laoreet a. Nullam vitae metus eu tellus tincidunt efficitur.
+                  </p>
+                </div>
               </div>
               <div class="portfolio-descr">
                 <h3 class="portfolio-list-header">Screen Illustrations</h3>
@@ -239,10 +446,18 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/OnlineCourses.jpg"
+                  src="./images/portf_6.jpg"
                   alt="online-courses"
                   width="360"
                 />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                    malesuada justo nec ex blandit, eget sodales lacus
+                    malesuada. Mauris ultrices hendrerit purus, eu finibus nunc
+                    laoreet a. Nullam vitae metus eu tellus tincidunt efficitur.
+                  </p>
+                </div>
               </div>
               <div class="portfolio-descr">
                 <h3 class="portfolio-list-header">Online Courses</h3>
@@ -256,13 +471,48 @@
 
     <footer class="footer">
       <div class="container container-footer">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-grey-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div>
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-grey-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-footer">
+          <p class="footer-title">Social media</p>
+          <ul class="social-media-icons">
+            <li>
+              <div class="icon-circle">
+                <svg class="icon-social" width="16" height="16">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="icon-circle">
+                <svg class="icon-social" width="16" height="16">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="icon-circle">
+                <svg class="icon-social" width="16" height="16">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="icon-circle">
+                <svg class="icon-social" width="16" height="16">
+                  <use href="./images/icons.svg#linkedin2"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
