--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_1.jpg"
+                  src="./images/Mark.jpg"
                   alt="product-designer"
                   width="264"
                   height="260"
@@ -193,7 +193,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_2.jpg"
+                  src="./images/Tom.jpg"
                   alt="frontend-developer"
                   width="264"
                   height="260"
@@ -239,7 +239,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_3.jpg"
+                  src="./images/Camila.jpg"
                   alt="marketing"
                   width="264"
                   height="260"
@@ -289,7 +289,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_4.jpg"
+                  src="./images/Daniel.jpg"
                   alt="ui-designer"
                   width="264"
                   height="260"
@@ -344,7 +344,7 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img src="./images/portf_1.jpg" alt="banking-app" width="360" />
+                <img src="./images/banking.jpg" alt="banking-app" width="360" />
                 <div class="overlay">
                   <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -362,7 +362,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_2.jpg"
+                  src="./images/CashlessPayment.jpg"
                   alt="cashless-payment"
                   width="360"
                 />
@@ -383,7 +383,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_3.jpg"
+                  src="./images/MeditationApp.jpg"
                   alt="meditation-app"
                   width="360"
                 />
@@ -404,7 +404,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_4.jpg"
+                  src="./images/TaxService.jpg"
                   alt="taxi-service"
                   width="360"
                 />
@@ -425,7 +425,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_5.jpg"
+                  src="./images/ScreenIllustrations.jpg"
                   alt="screen-illustrations"
                   width="360"
                 />
@@ -446,7 +446,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_6.jpg"
+                  src="./images/OnlineCourses.jpg"
                   alt="online-courses"
                   width="360"
                 />
