--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
 
     <main>
-      <!--section 1-->
+      <!--Section 1-->
 
       <section class="section main-first">
         <div class="container div-one">
