--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_1.jpg"
+                  src="./images/Mark.jpg"
                   alt="product-designer"
                   width="264"
                   height="260"
@@ -191,7 +191,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_2.jpg"
+                  src="./images/Tom.jpg"
                   alt="frontend-developer"
                   width="264"
                   height="260"
@@ -236,7 +236,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_3.jpg"
+                  src="./images/Camila.jpg"
                   alt="marketing"
                   width="264"
                   height="260"
@@ -285,7 +285,7 @@
             <li class="team-list-item">
               <div class="team-img">
                 <img
-                  src="./images/img_4.jpg"
+                  src="./images/Daniel.jpg"
                   alt="ui-designer"
                   width="264"
                   height="260"
@@ -339,7 +339,7 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img src="./images/portf_1.jpg" alt="banking-app" width="360" />
+                <img src="./images/banking.jpg" alt="banking-app" width="360" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -355,7 +355,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_2.jpg"
+                  src="./images/CashlessPayment.jpg"
                   alt="cashless-payment"
                   width="360"
                 />
@@ -373,7 +373,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_3.jpg"
+                  src="./images/MeditationApp.jpg"
                   alt="meditation-app"
                   width="360"
                 />
@@ -392,7 +392,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_4.jpg"
+                  src="./images/TaxService.jpg"
                   alt="taxi-service"
                   width="360"
                 />
@@ -411,7 +411,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_5.jpg"
+                  src="./images/ScreenIllustrations.jpg"
                   alt="screen-illustrations"
                   width="360"
                 />
@@ -430,7 +430,7 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  src="./images/portf_6.jpg"
+                  src="./images/OnlineCourses.jpg"
                   alt="online-courses"
                   width="360"
                 />
